@@ -3,5 +3,5 @@ import xbmc
 
 if __name__ == '__main__':
 	plugin = 'plugin://plugin.video.venom/'
-	path = 'RunPlugin(%s?action=clearBookmarks&opensettings=false)' % plugin
+	path = 'RunPlugin(%s?action=cache_clearBookmarks&opensettings=false)' % plugin
 	xbmc.executebuiltin(path)
