@@ -1,7 +1,10 @@
+[B][COLOR red]Update - v1.0.6 - Sept 03, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Changes for Venom compliant code requirements[/I]
+
 [B][COLOR red]Update - v1.0.5 - May 29, 2020[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Added service for settings changes.  This now helps items
     to change and be more responsive than before.[/I]
-[COLOR yellow]--[/COLOR][I] Fixed issue where wrong year wascausing bookmark issues.[/I]
+[COLOR yellow]--[/COLOR][I] Fixed issue where wrong year was causing bookmark issues.[/I]
 
 [B][COLOR red]Update - v1.0.4 - May 8, 2020[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Added "Clear Item Bookmark".  This will only show for items
